--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -216,7 +216,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XB-m5-DFp">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8XB-m5-DFp">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvG-4z-TZV">
@@ -374,15 +374,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="TLS-zL-hgS">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="TLS-zL-hgS" customClass="A">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="hCU-yT-EaZ">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="answerCell" id="hCU-yT-EaZ" customClass="AnswerTableViewCell">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hCU-yT-EaZ" id="aEH-VF-ExA">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMS-BT-AHq">
+                                                    <rect key="frame" x="8" y="8" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="60" id="BN2-w7-qx9"/>
+                                                        <constraint firstAttribute="height" constant="60" id="uL8-Wn-yHS"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FLX-io-my1">
+                                                    <rect key="frame" x="8" y="71" width="584" height="30"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="55" id="iyF-h6-TeC"/>
+                                                    </constraints>
+                                                </webView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3XO-o4-etb">
+                                                    <rect key="frame" x="76" y="27" width="516" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="FLX-io-my1" firstAttribute="top" secondItem="eMS-BT-AHq" secondAttribute="bottom" constant="3" id="1tq-qk-m80"/>
+                                                <constraint firstItem="3XO-o4-etb" firstAttribute="top" secondItem="aEH-VF-ExA" secondAttribute="topMargin" constant="19" id="FkB-q1-XB8"/>
+                                                <constraint firstItem="eMS-BT-AHq" firstAttribute="leading" secondItem="aEH-VF-ExA" secondAttribute="leadingMargin" id="GOh-8y-qCu"/>
+                                                <constraint firstItem="eMS-BT-AHq" firstAttribute="top" secondItem="aEH-VF-ExA" secondAttribute="topMargin" id="Nmh-ic-E2o"/>
+                                                <constraint firstItem="FLX-io-my1" firstAttribute="leading" secondItem="aEH-VF-ExA" secondAttribute="leadingMargin" id="PyD-nV-qBt"/>
+                                                <constraint firstItem="FLX-io-my1" firstAttribute="trailing" secondItem="aEH-VF-ExA" secondAttribute="trailingMargin" id="bna-Nh-mnM"/>
+                                                <constraint firstItem="FLX-io-my1" firstAttribute="bottom" secondItem="aEH-VF-ExA" secondAttribute="bottomMargin" id="eta-Gu-zX9"/>
+                                                <constraint firstItem="3XO-o4-etb" firstAttribute="leading" secondItem="eMS-BT-AHq" secondAttribute="trailing" constant="8" id="p62-BR-qcx"/>
+                                                <constraint firstItem="3XO-o4-etb" firstAttribute="leading" secondItem="eMS-BT-AHq" secondAttribute="trailing" constant="8" id="z0c-Gv-TND"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="answerRate" destination="eMS-BT-AHq" id="6Gu-8L-ddW"/>
+                                            <outlet property="answerText" destination="FLX-io-my1" id="TW2-Bu-7e6"/>
+                                            <outlet property="answerTextHeight" destination="iyF-h6-TeC" id="Vkn-jF-KVd"/>
+                                            <outlet property="userName" destination="3XO-o4-etb" id="lXc-P1-Pvi"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -450,7 +492,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sew-bl-tWO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928" y="2822"/>
+            <point key="canvasLocation" x="1112" y="2030"/>
         </scene>
         <!--Sidebar View Controller-->
         <scene sceneID="TC2-OV-4BK">
@@ -656,7 +698,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hPY-0T-DcY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1656" y="-2033"/>
+            <point key="canvasLocation" x="1626" y="-2113"/>
         </scene>
         <!--Statistic View Controller-->
         <scene sceneID="Jhe-JC-slB">
@@ -897,60 +939,25 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PlG-JR-7Hw" id="Gve-ZH-j2w">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7r-kE-OML">
-                                                    <rect key="frame" x="8" y="20" width="62" height="62"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6aO-p2-IeK">
+                                                    <rect key="frame" x="291" y="8" width="301" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uSq-PF-sQI">
-                                                    <rect key="frame" x="87" y="8" width="505" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="К вопросу" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="22J-5v-CYX">
+                                                    <rect key="frame" x="8" y="30" width="89" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vaq-vN-Juj">
-                                                    <rect key="frame" x="87" y="37" width="505" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7uZ-ep-Au7">
-                                                    <rect key="frame" x="87" y="59" width="87" height="32"/>
-                                                    <state key="normal" title="Button" image="answers-32.png">
-                                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JQp-V0-w5C">
-                                                    <rect key="frame" x="220" y="59" width="87" height="32"/>
-                                                    <state key="normal" title="Button" image="chat-32.png">
-                                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdj-Wg-hc6">
-                                                    <rect key="frame" x="349" y="59" width="87" height="32"/>
-                                                    <state key="normal" title="Button" image="eye110.png">
-                                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rhy-3T-mNn">
+                                                    <rect key="frame" x="105" y="30" width="487" height="30"/>
+                                                    <state key="normal" title="Button">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                 </button>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="uSq-PF-sQI" firstAttribute="top" secondItem="Gve-ZH-j2w" secondAttribute="topMargin" constant="5" id="6FZ-Qt-V6F"/>
-                                                <constraint firstItem="uSq-PF-sQI" firstAttribute="trailing" secondItem="Gve-ZH-j2w" secondAttribute="trailingMargin" constant="10" id="K2J-1p-d5C"/>
-                                                <constraint firstItem="7uZ-ep-Au7" firstAttribute="bottom" secondItem="Gve-ZH-j2w" secondAttribute="bottomMargin" id="KD5-jA-3Mw"/>
-                                                <constraint firstItem="vaq-vN-Juj" firstAttribute="top" secondItem="uSq-PF-sQI" secondAttribute="bottom" constant="8" id="SMU-BQ-cbL"/>
-                                                <constraint firstItem="u7r-kE-OML" firstAttribute="leading" secondItem="Gve-ZH-j2w" secondAttribute="leadingMargin" constant="10" id="Svw-D8-hca"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="u7r-kE-OML" secondAttribute="bottom" constant="11" id="YAP-6t-1Rx"/>
-                                                <constraint firstItem="vaq-vN-Juj" firstAttribute="trailing" secondItem="Gve-ZH-j2w" secondAttribute="trailingMargin" constant="10" id="aeX-Oi-ena"/>
-                                                <constraint firstItem="7uZ-ep-Au7" firstAttribute="leading" secondItem="u7r-kE-OML" secondAttribute="trailing" constant="17" id="biF-ZJ-iqk"/>
-                                                <constraint firstItem="Sdj-Wg-hc6" firstAttribute="leading" secondItem="JQp-V0-w5C" secondAttribute="trailing" constant="31" id="d7B-JM-ryK"/>
-                                                <constraint firstItem="7uZ-ep-Au7" firstAttribute="top" secondItem="vaq-vN-Juj" secondAttribute="bottom" constant="1" id="wRb-4e-d7j"/>
-                                                <constraint firstItem="u7r-kE-OML" firstAttribute="top" secondItem="Gve-ZH-j2w" secondAttribute="topMargin" constant="11" id="xuP-vd-EHL"/>
-                                                <constraint firstItem="JQp-V0-w5C" firstAttribute="leading" secondItem="7uZ-ep-Au7" secondAttribute="trailing" constant="34" id="z5c-68-fEb"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -1073,10 +1080,10 @@
         <image name="plus-32.png" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5Em-mt-R6W"/>
-        <segue reference="4oy-yi-Vs6"/>
         <segue reference="Ogc-fD-TQd"/>
+        <segue reference="4oy-yi-Vs6"/>
         <segue reference="uQv-Ln-Urv"/>
+        <segue reference="j2K-an-z6G"/>
         <segue reference="jdO-yh-WYz"/>
         <segue reference="Zma-F1-cBs"/>
     </inferredMetricsTieBreakers>
